Bugs have been fixed

--- a/FlowCrypt/src/main/res/values-ru-rRU/strings.xml
+++ b/FlowCrypt/src/main/res/values-ru-rRU/strings.xml
@@ -21,21 +21,21 @@
     <string name="edit">Редактировать</string>
     <string name="delete">Удалить</string>
     <string name="sending_message_must_not_be_empty">Сообщение не должно быть пустым</string>
-    <string name="no_subject">(без темыt)</string>
+    <string name="no_subject">(без темы)</string>
     <string name="show_the_public_key">Показать открытый ключ</string>
     <string name="hide_the_public_key">Скрыть открытый ключ</string>
     <string name="import_pub_key">Импортировать открытый ключ</string>
     <string name="update_pub_key">Обновить открытый ключ</string>
-    <string name="pub_key_successfully_imported">Открытый ключ был импортирован</string>
-    <string name="pub_key_successfully_updated">Открытый ключ был обновлен</string>
+    <string name="pub_key_successfully_imported">Открытый ключ импортирован</string>
+    <string name="pub_key_successfully_updated">Открытый ключ обновлен</string>
     <string name="import_private_key">Импортировать закрытый ключ</string>
     <string name="load_from_a_file">Загрузить из файла</string>
     <string name="load_from_clipboard">Загрузить из буфера</string>
     <string name="choose_another_key">Выберите другой ключ</string>
     <string name="continue_">Продолжить</string>
-    <string name="hint_clipboard_is_empty">Ваш буфер обмена пуст. Найдите свой ключ %1$s, скопируйте его, где вы его храните, выделите текст и скопируйте его. После этого вернитесь к %2$s.</string>
+    <string name="hint_clipboard_is_empty">Ваш буфер обмена пуст. Найдите свой %1$s ключ, скопируйте его оттуда, где вы его храните, выделите текст и скопируйте его. После этого вернитесь к %2$s.</string>
     <string name="template_remove_recipient">Удалить %1$s</string>
-    <string name="import_their_public_key">Импортировать их открытый ключ</string>
+    <string name="import_their_public_key">Импортировать его открытый ключ</string>
     <string name="download_complete">Загрузка завершена</string>
     <string name="waiting_to_load">Ожидание загрузки</string>
     <string name="choose_attachment">Выберите вложение</string>
@@ -469,9 +469,9 @@
     <string name="reconnect_your_account">Пожалуйста, повторно подключите свою учетную запись, чтобы продолжить использование %1$s с %2$s</string>
     <string name="provide_passphrase_to_decrypt_file">Пожалуйста, укажите ключ-фразу для расшифровки этого файла</string>
     <string name="failed_load_message_from_email_server">Не удалось загрузить сообщение с почтового сервера</string>
-    <string name="failed_please_try_again_later">Не удалось. Пожалуйста, повторите попытку позже</string>
+    <string name="failed_please_try_again_later">Не удалось завершить операцию. Пожалуйста, повторите попытку позже</string>
     <string name="experimental_settings">Экспериментальные настройки</string>
-    <string name="expand_an_account_managment">Расширьте управление аккаунтом</string>
+    <string name="expand_an_account_managment">Развернуть управление аккаунтом</string>
     <string name="evaluating">Оценка…</string>
     <string name="error_occurred_please_try_again">Произошла ошибка, попробуйте еще раз</string>
     <string name="backup_was_not_sent">Ошибка резервного копирования, попробуйте еще раз</string>
@@ -480,7 +480,7 @@
     <string name="crash_the_app">Сбой приложения</string>
     <string name="all_labels">Все вкладки</string>
     <string name="security_and_privacy">Безопасность и конфиденциальность</string>
-    <string name="legal">Политики</string>
-    <string name="experimental">Дополнительные</string>
+    <string name="legal">Юридическая информация</string>
+    <string name="experimental">Экспериментальные</string>
     <string name="loading_labels">Загрузка вкладок</string>
 </resources>
